Add focusing so moving while inputting text does not break app

--- a/Checklist.html
+++ b/Checklist.html
@@ -825,6 +825,11 @@ id="todo"
 
       <script>
       /* Angular */
+        window.onkeydown = function(e){
+        var $focused = $(':focus');
+        window.focus();
+        $focused.focus();
+      }
       var myApp = angular.module('myApp', []);
       var photoMap = {};
 
