--- a/checklistAdmin.html
+++ b/checklistAdmin.html
@@ -139,7 +139,7 @@ function removeParent(button) {
           <label> Photo Attachment: </label>
           <input type="checkbox" ng-model="item.Attach_Photo__c" name="O4"></input>
           <br/>
-          <li ng-repeat="choice in choices" ng-show="showValues(item)">
+          <div ng-show="showValues(item)">
             <br/>
             <!--NEEDS TO BE FIXED TO FOLLOW CHOICE ADDER-->
             <div id='choice-wrapper'>
@@ -158,7 +158,7 @@ function removeParent(button) {
             <br/>
             <!--<label> Values: </label>
             <input type="text" ng-model="item.Values__c" name="Q1"></input>-->
-          </li>
+          </div>
           <br/>
           <input type='button' value='Remove Question' ng-click='removeQuestion(item)'/>
           <br/>
